# ternsig

./: Cargo.toml  PLAN_TERNSIG_1.1.md  PLAN_TERNSIG_1.2.md  PLAN_TERNSIG_1.3.md  README.md
reasoning/: rule_encoder.ternsig  state_encoder.ternsig  violation_detector.ternsig
specs/: CORE_ISA.md  EXTENSIONS.md  INDEX.md  LAYERS.md  MIGRATION.md  TVMR_FORMAT.md
specs/core/: CORE_ISA.md
specs/extensions/: tvmr.activation.md  tvmr.arch.md  tvmr.bank.md  tvmr.ipc.md  tvmr.learning.md  tvmr.lifecycle.md  tvmr.neuro.md  tvmr.orchestration.md  tvmr.sampling.md  tvmr.tensor.md  tvmr.ternary.md  tvmr.test.md
src/: error.rs  learning.rs  lib.rs  loader.rs  ternary.rs  thermo.rs  validate.rs
src/snn/: attractor.rs  axes.rs  hodgkin_huxley.rs  izhikevich.rs  mod.rs  model.rs  network.rs  profiles.rs  snapshot.rs  traits.rs
src/tensor_isa/: action.rs  assembler.rs  binary.rs  hot_reload.rs  instruction.rs  interpreter.rs  mod.rs  modifier.rs  register.rs  runtime_mod.rs
src/vm/: action.rs  assembler.rs  binary.rs  extension.rs  hot_reload.rs  instruction.rs  interpreter.rs  mod.rs  modifier.rs  register.rs  registry.rs  runtime_mod.rs  types.rs  validator.rs
src/vm/extensions/: activation.rs  arch.rs  bank.rs  ipc.rs  learning.rs  lifecycle.rs  mod.rs  neuro.rs  orchestration.rs  pool.rs  sampling.rs  tensor.rs  ternary.rs  test_ext.rs
src/vm/interpreter/: mod.rs  ops_control.rs  ops_forward.rs  ops_learning.rs  ops_runtime.rs  ops_ternary.rs
